# fable-export-for-llm

./: .gitignore  README.md  pyproject.toml
src/fable_to_goodreads/: auth.py  cli.py  client.py  exporter.py  models.py
